# pheme-sdks

./: .gitignore  Jenkinsfile  LICENSE  README.md
csharp/kya/: .gitignore  KyaSdk.sln  README.md
csharp/kya/src/Kya/: Exceptions.cs  Kya.csproj  KyaClient.cs  KyaClientOptions.cs  Models.cs
csharp/kya/tests/Kya.Tests/: Kya.Tests.csproj  KyaClientTests.cs
csharp/pheme/: .gitignore  PhemeSdk.slnx  README.md
csharp/pheme/src/Pheme.Sdk/: AssemblyInfo.cs  Exceptions.cs  Models.cs  Pheme.Sdk.csproj  PhemeClient.cs  PhemeClientOptions.cs
csharp/pheme/tests/Pheme.Sdk.Tests/: Pheme.Sdk.Tests.csproj  PhemeClientTests.cs
go/kya/: .gitignore  README.md  go.mod
go/kya/examples/basic/: main.go
go/kya/kya/: client.go  client_test.go  errors.go  types.go
go/pheme/: .gitignore  README.md  go.mod
go/pheme/pheme/: auth_test.go  client.go  client_test.go  errors.go  kya.go  types.go
python/kya/: .gitignore  README.md  pyproject.toml
python/kya/src/kya/: __init__.py  _http.py  client.py  errors.py  models.py
python/kya/tests/: test_client.py  test_errors.py  test_models.py
python/pheme/: .gitignore  README.md  pyproject.toml
python/pheme/src/pheme_sdk/: __init__.py  async_client.py  client.py  exceptions.py  models.py
python/pheme/tests/: test_client.py
rust/kya/: Cargo.toml  README.md
rust/kya/examples/: quickstart.rs
rust/kya/src/: client.rs  config.rs  error.rs  lib.rs  models.rs  retry.rs
rust/kya/tests/: client_tests.rs
rust/pheme/: .gitignore  Cargo.toml  README.md
rust/pheme/examples/: create_post.rs  list_agents.rs
rust/pheme/src/: client.rs  endpoints.rs  error.rs  lib.rs  types.rs
rust/pheme/tests/: client_tests.rs
typescript/kya/: .eslintrc.json  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
typescript/kya/src/: client.ts  errors.ts  http.ts  index.test.ts  index.ts  types.ts
typescript/pheme/: .eslintrc.json  README.md  package-lock.json  package.json  tsconfig.json
typescript/pheme/src/: client.ts  errors.ts  http.ts  index.ts  types.ts
typescript/pheme/tests/: client.test.ts  errors.test.ts
