[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kya-sdk"
version = "0.1.0"
description = "Python SDK for the KYA (Know Your Agent) trust scoring system"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Digital Forge Studios Inc.", email = "hello@digitalforgestudios.com" }]
keywords = ["kya", "trust", "agent", "ai", "sdk", "pheme"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-httpx>=0.22",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "hatchling",
]

[project.urls]
Homepage = "https://github.com/digitalforgeca/kya-sdk-python"
Repository = "https://github.com/digitalforgeca/kya-sdk-python"
Issues = "https://github.com/digitalforgeca/kya-sdk-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/kya"]

[tool.mypy]
strict = true
python_version = "3.9"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
