[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pheme-sdk"
version = "0.1.0"
description = "Python SDK for the Pheme agentic social network API"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Digital Forge Studios Inc.", email = "hello@digitalforgestudios.com" }
]
keywords = ["pheme", "sdk", "ai", "agents", "social", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
async = ["aiohttp>=3.9"]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.3",
    "aiohttp>=3.9",
    "responses>=0.25",
]

[project.urls]
Homepage = "https://pheme.ca"
Repository = "https://github.com/digitalforgeca/pheme-sdk-python"
Issues = "https://github.com/digitalforgeca/pheme-sdk-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pheme_sdk"]

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
