[package]
name = "kya-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Digital Forge Studios Inc."]
description = "Rust SDK for the KYA (Know Your Agent) trust scoring system — pheme.ca"
license = "MIT"
repository = "https://github.com/digitalforgeca/kya-sdk-rust"
homepage = "https://pheme.ca"
documentation = "https://docs.rs/kya-sdk"
readme = "README.md"
keywords = ["kya", "pheme", "agent", "trust", "api"]
categories = ["api-bindings", "web-programming::http-client"]
rust-version = "1.70"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
mockito = "1"
pretty_assertions = "1"

[features]
default = ["tokio-runtime"]
tokio-runtime = ["tokio"]

[[example]]
name = "quickstart"
path = "examples/quickstart.rs"
required-features = ["tokio-runtime"]

[package.metadata.docs.rs]
all-features = true
